datos de mejora

--- a/admin.env
+++ b/admin.env
@@ -1,2 +1,2 @@
-CADENA_CONEXION_DB=mongodb+srv://tesync:TD0T6LeV9HcvwN7X@db.upudaw4.mongodb.net/calificacionesDB
+CADENA_CONEXION_DB=mongodb+srv://tesync:TD0T6LeV9HcvwN7X@db.upudaw4.mongodb.net/DB
 PUERTO=3000
